[tool.poetry]
name = "access-logger"
version = "0.1.0"
description = ""
authors = ["Tonoyama <yudaitonoyama@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
gspread = "^5.4.0"
oauth2client = "^4.1.3"
python-dotenv = "^0.20.0"
pygame = "^2.1.2"
selenium = "^4.4.3"
nfcpy = "^1.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
